cmake_minimum_required(VERSION 3.5)
project(teensy-gfx-controls)
IF (NOT DEFINED BUILD_FOR_TEENSY)
    set(BUILD_FOR_LINUX 1)
    add_definitions(-DBUILD_FOR_LINUX)
ELSE()
    import_arduino_library(cores ${COREPATH})
    import_arduino_library(SPI ${DEPSPATH}/SPI)
    import_arduino_library(SdFat ${DEPSPATH}/SdFat_PaulStoffregen/src common DigitalIO ExFatLib FatLib FsLib iostream SdCard SpiDriver)
    import_arduino_library(SD ${DEPSPATH}/SD/src)
    import_arduino_library(SerialFlash ${DEPSPATH}/SerialFlash util)
    import_arduino_library(Wire ${DEPSPATH}/Wire utility)
    import_arduino_library(arm_math ${DEPSPATH}/arm_math/src)
    import_arduino_library(TeensyGFX ${DEPSPATH}/teensy-gfx/src)
ENDIF()

add_subdirectory(src)

if (DEFINED BUILD_EXAMPLE)
    add_subdirectory(examples/basic)
    add_subdirectory(examples/demo)
    add_subdirectory(examples/view_example)
    add_subdirectory(examples/scene_controller)
endif()