cmake_minimum_required(VERSION 3.5)
project(teensy-gfx-controls)
IF (NOT DEFINED BUILD_FOR_TEENSY)
    set(BUILD_FOR_LINUX 1)
    add_definitions(-DBUILD_FOR_LINUX)
    include(cmake_declare_and_fetch.cmake.in)
    DeclareAndFetch(teensy_x86_stubs            https://github.com/newdigate/teensy-x86-stubs.git main src)
    DeclareAndFetch(teensy_gfx                  https://github.com/newdigate/teensy-gfx.git noinstall src)
    DeclareAndFetch(teensy_x86_encoder_stubs    https://github.com/newdigate/teensy-x86-encoder-stubs.git noinstall src)
    DeclareAndFetch(teensy_x86_bounce2_stubs    https://github.com/newdigate/teensy-x86-bounce2-stubs.git noinstall src)
    DeclareAndFetch(teensy_x86_midi_stubs       https://github.com/newdigate/teensy-x86-midi-stubs noinstall src)

ELSE()
    import_arduino_library(cores ${COREPATH})
    import_arduino_library(SPI ${DEPSPATH}/SPI)
    import_arduino_library(SdFat ${DEPSPATH}/SdFat_PaulStoffregen/src common DigitalIO ExFatLib FatLib FsLib iostream SdCard SpiDriver)
    import_arduino_library(SD ${DEPSPATH}/SD/src)
    import_arduino_library(Encoder ${DEPSPATH}/Encoder)
    import_arduino_library(SerialFlash ${DEPSPATH}/SerialFlash util)
    import_arduino_library(Wire ${DEPSPATH}/Wire utility)
    import_arduino_library(arm_math ${DEPSPATH}/arm_math/src)
    import_arduino_library(TeensyGFX ${DEPSPATH}/teensy-gfx/src)
ENDIF()

add_subdirectory(src)

if (BUILD_EXAMPLE)
    if (DEFINED BUILD_FOR_LINUX)
        DeclareAndFetch(teensy_x86_sd_stubs             https://github.com/newdigate/teensy-x86-sd-stubs main src)
        DeclareAndFetch(teensy_audio_x86_stubs          https://github.com/newdigate/teensy-audio-x86-stubs noinstall "src;extras/soundio/src")
        DeclareAndFetch(teensy_st7735_linux_stubs       https://github.com/newdigate/teensy-st7735-linux-stubs noinstall "src;extras/opengl/src")

        DeclareAndFetch(rtmidi                          https://github.com/thestk/rtmidi.git master "/")

        DeclareAndFetchSubLibrary(teensy_x86_midi_stubs     extras/rtmidi/src)
        DeclareAndFetch(teensy_ili9341_controls         https://github.com/newdigate/teensy_ili9341_controls master src)
        DeclareAndFetch(arduino_tftpianoview            https://github.com/newdigate/arduino-tftpianoview.git feature/generic src)

        add_subdirectory(examples/basic)
        #add_subdirectory(examples/demo)
        add_subdirectory(examples/view_example)
        add_subdirectory(examples/menu)
        add_subdirectory(examples/scene_controller)
    endif ()
endif()